# babelize

./: FAQ  Makefile.am  NEWS  README  THANKS  TODO  configure.ac
etc/: Makefile.am  babelize.conf
share/babelize/: Makefile.am  babelize
share/man/: Makefile.am  babelize-config.1  babelize.1
